--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "webpack --watch",
     "start": "webpack serve",
-    "build": "webpack"
+    "build": "webpack --config prod.config.js"
   },
   "author": "JP",
   "license": "ISC",
