--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "sass": "^1.45.0",
+    "sass-loader": "^12.4.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.24.2",
+    "webpack": "^5.65.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
