--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "wizytówka strony centrum telefonii",
   "main": "index.js",
   "scripts": {
-    "watch": "webpack --watch",
-    "start": "webpack serve",
-    "build": "webpack --config prod.config.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "author": "JP",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.13.1",
     "@babel/preset-env": "^7.13.5",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.0",
     "file-loader": "^6.2.0",
@@ -26,5 +29,9 @@
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "next": "^13.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
