--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "devDependencies": {
     "@babel/core": "^7.13.1",
     "@babel/preset-env": "^7.13.5",
+    "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.0",
+    "eslint": "^8.27.0",
+    "eslint-config-next": "^13.0.3",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
@@ -25,11 +28,13 @@
     "sass": "^1.45.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^2.0.0",
+    "typescript": "^4.8.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
