--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/react-transition-group": "^4.4.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.0",
     "eslint": "^8.27.0",
@@ -37,6 +38,7 @@
     "clsx": "^1.2.1",
     "next": "^13.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-transition-group": "^4.4.5"
   }
 }
