--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.1",
     "@babel/preset-env": "^7.13.5",
+    "@types/lodash.throttle": "^4.1.7",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
@@ -36,6 +37,8 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "lodash.throttle": "^4.1.1",
+    "nanoid": "^4.0.0",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
