--- a/package.json
+++ b/package.json
@@ -35,6 +35,13 @@
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
+  "overrides": {
+    "netlify-cms-app": {
+      "react": "^18.2.0",
+      "@types/react": "^18.0.17",
+      "react-dom": "^18.2.0"
+    }
+  },
   "dependencies": {
     "clsx": "^1.2.1",
     "lodash.throttle": "^4.1.1",
