--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "seamless-scroll-polyfill": "^2.2.0"
   }
 }
