--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "centrum-telefonii",
   "version": "1.0.0",
-  "description": "wizytówka strony centrum telefonii",
+  "description": "Wizytówka strony centrum telefonii",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c \"next dev\"",
+    "build": "tinacms build && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,8 +14,9 @@
   "devDependencies": {
     "@babel/core": "^7.13.1",
     "@babel/preset-env": "^7.13.5",
+    "@tinacms/cli": "^1.5.47",
     "@types/lodash.throttle": "^4.1.7",
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.19.41",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-transition-group": "^4.4.5",
@@ -35,22 +36,15 @@
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
-  "overrides": {
-    "netlify-cms-app": {
-      "react": "^18.2.0",
-      "@types/react": "^18.0.17",
-      "react-dom": "^18.2.0"
-    }
-  },
   "dependencies": {
     "clsx": "^1.2.1",
     "lodash.throttle": "^4.1.1",
     "nanoid": "^4.0.0",
-    "netlify-cms-app": "^2.15.72",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-transition-group": "^4.4.5",
-    "seamless-scroll-polyfill": "^2.2.0"
+    "seamless-scroll-polyfill": "^2.2.0",
+    "tinacms": "^1.6.5"
   }
 }
