--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "framer-motion": "^11.3.19",
     "lodash.throttle": "^4.1.1",
     "nanoid": "^4.0.0",
     "next": "^13.0.2",
