--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.1",
     "@babel/preset-env": "^7.13.5",
+    "@iconify-icon/react": "^2.1.0",
     "@tinacms/cli": "^1.5.47",
     "@types/lodash.throttle": "^4.1.7",
     "@types/node": "^18.19.41",
